err/espy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/espy'...
Compiling './lib/python3.5/site-packages/espy/ExternalCheck.py'...
***   File "./lib/python3.5/site-packages/espy/ExternalCheck.py", line 33
    print "The requirement line couldn't be parsed:\n\t%s" % (req_line)
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/espy/GemCheck.py'...
***   File "./lib/python3.5/site-packages/espy/GemCheck.py", line 31
    print "The requirement line couldn't be parsed:\n\t%s" % (req_line)
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/espy/NpmCheck.py'...
***   File "./lib/python3.5/site-packages/espy/NpmCheck.py", line 35
    print "The requirement line couldn't be parsed:\n\t%s" % (req_line)
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/espy/PerlModuleCheck.py'...
***   File "./lib/python3.5/site-packages/espy/PerlModuleCheck.py", line 32
    print "The requirement line couldn't be parsed:\n\t%s" % (req_line)
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/espy/PythonCheck.py'...
***   File "./lib/python3.5/site-packages/espy/PythonCheck.py", line 28
    print "The requirement line couldn't be parsed:\n\t%s" % (req_line)
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/espy/PythonLibraryCheck.py'...
***   File "./lib/python3.5/site-packages/espy/PythonLibraryCheck.py", line 33
    print "The requirement line couldn't be parsed:\n\t%s" % (req_line)
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/espy/processor'...
Listing './lib/python3.5/site-packages/espy/syntax'...
Listing './lib/python3.5/site-packages/espy-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
